update z-index for header and fix responsive for tablet

--- a/src/style.css
+++ b/src/style.css
@@ -78,7 +78,7 @@ body {
     align-items: center;
     background-color: var(--primary-color);
     position: fixed;
-    z-index: 5;
+    z-index: 10;
 }
 
 .header>span {
@@ -335,7 +335,8 @@ body {
 
     .body__option {
         padding: 40px 25px;
-        overflow-x: scroll
+        justify-content: center;
+        flex-wrap: wrap;
     }
 
     .body__about {
